--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -88,8 +88,7 @@ jobs:
       - name: Login to docker
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_SECRET }}
       - name: Build and push (dataopstk/dock-r)
-        run:
-          cd ci-builder
+        run: |
           docker build -t dataopstk/dock-r:latest-dev .
           docker push dataopstk/dock-r:latest-dev
       - name: Retag Dataops image
